[package]
name = "dueue"
version = "2.0.0"
edition = "2021"

[dependencies]
actix-web = "4"
anyhow = "1.0.72"
async-trait = "0.1.57"
chrono = { version = "0.4.26", features = ["serde"] }
env_logger = "0.10.0"
log = "0.4"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1"
strum = "0.25.0"
strum_macros = "0.25.1"
tokio = { version = "1.24", features = ["sync"] }
tokio-postgres = "0.7.7"
bb8 = "0.8.1"
bb8-postgres = "0.8.1"
uuid = { version = "1.4.1", features = ["v4"] }

[dev-dependencies]
actix-rt = "2.8.0"
actix-http = "3.3.1"
actix-service = "2.0.2"
